--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/phillipgreenii/ftp-stream",
   "dependencies": {
+    "async": "^1.4.0",
     "debug": "^2.2.0",
     "deferred-stream": "^0.2.0",
     "ftp": "^0.3.10",
