--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   },
   "homepage": "https://github.com/phillipgreenii/ftp-stream",
   "dependencies": {
-    "async": "^1.4.0",
+    "async": "^1.4.2",
     "debug": "^2.2.0",
     "deferred-stream": "^0.2.0",
     "ftp": "^0.3.10",
-    "vinyl": "^0.5.0"
+    "vinyl": "^0.5.1"
   },
   "devDependencies": {
-    "ftpd": "^0.2.11",
+    "ftpd": "sstur/nodeftpd",
     "stream-equal": "^0.1.5",
-    "tape": "^4.0.0",
+    "tape": "^4.0.3",
     "through2": "^2.0.0",
     "vinyl-fs": "^1.0.0"
   }
