--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "node ./node_modules/tape/bin/tape test/*.test.js test/**/*.test.js",
+    "cover": "istanbul cover --dir reports/coverage node_modules/tape/bin/tape test/*.test.js test/**/*.test.js",
     "preversion": "npm run test",
     "postversion": "git push && git push --tags"
   },
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "ftpd": "sstur/nodeftpd",
+    "istanbul": "^0.3.17",
     "stream-equal": "^0.1.5",
     "tape": "^4.0.3",
     "through2": "^2.0.0",
