--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_script:
 - npm install -g istanbul
 - npm install -g codeclimate-test-reporter
 script:
-- npm run coverage
+- npm run cover
 after_script:
 - codeclimate-test-reporter < reports/coverage/lcov.info
